# rknn_segm

./: CMakeLists.txt
src/: main.cpp
utils/: drawing.cpp  drawing.h  mpp_decoder.cpp  mpp_encoder.cpp  mpp_encoder.h
